--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["pikachu", "Pokedex", "pokemons"]
+  "cSpell.words": ["pikachu", "pokeball", "pokeballv", "Pokedex", "pokemons"]
 }
