error view design and implementation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["pikachu", "pokeball", "pokeballv", "Pokedex", "pokemons"]
+  "cSpell.words": [
+    "Alives",
+    "pikachu",
+    "pokeball",
+    "pokeballv",
+    "Pokedex",
+    "pokemons"
+  ]
 }
