--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - images/loading.gif
     - images/pink_pokeball.png
     - images/pokeball.json
+    - images/missigno.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
